{
  "version": 4,
  "terraform_version": "1.15.7",
  "serial": 62,
  "lineage": "8a1a2e86-b800-8063-515e-db8d0183d80d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "MyEC2Instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-01a00762f46d584a1",
            "arn": "arn:aws:ec2:ap-south-1:435556620349:instance/i-00d903dfeceaafd67",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00d903dfeceaafd67",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "My-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-05170265d2a7d8eff"
              }
            ],
            "primary_network_interface_id": "eni-05170265d2a7d8eff",
            "private_dns": "ip-10-0-1-17.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.17",
            "public_ip": "13.203.207.63",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07da01460adcfdd77",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0661b2d8f3a74c4df",
            "tags": {
              "Name": "MyEC2Instance"
            },
            "tags_all": {
              "Name": "MyEC2Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a867f57ce2d16639"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "435556620349",
            "id": "i-00d903dfeceaafd67",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.my_security_group",
            "aws_subnet.my_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:435556620349:internet-gateway/igw-032f0bf4a431a2e97",
            "id": "igw-032f0bf4a431a2e97",
            "owner_id": "435556620349",
            "region": "ap-south-1",
            "tags": {
              "Name": "My_internet_gateway"
            },
            "tags_all": {
              "Name": "My_internet_gateway"
            },
            "vpc_id": "vpc-05c9671e07613952c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "435556620349",
            "id": "igw-032f0bf4a431a2e97",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:435556620349:route-table/rtb-07755bf588c509b31",
            "id": "rtb-07755bf588c509b31",
            "owner_id": "435556620349",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-032f0bf4a431a2e97",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05c9671e07613952c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "435556620349",
            "id": "rtb-07755bf588c509b31",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.my_internet_gateway",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0737414eff631e5e1",
            "region": "ap-south-1",
            "route_table_id": "rtb-07755bf588c509b31",
            "subnet_id": "subnet-0661b2d8f3a74c4df"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "435556620349",
            "id": "rtbassoc-0737414eff631e5e1",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.my_internet_gateway",
            "aws_route_table.my_route_table",
            "aws_subnet.my_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:435556620349:security-group/sg-0a867f57ce2d16639",
            "description": "Allow SSH and HTTP traffic",
            "egress": [],
            "id": "sg-0a867f57ce2d16639",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "my-security-group",
            "name_prefix": "",
            "owner_id": "435556620349",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05c9671e07613952c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "435556620349",
            "id": "sg-0a867f57ce2d16639",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:435556620349:subnet/subnet-0661b2d8f3a74c4df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0661b2d8f3a74c4df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "435556620349",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "My_subnet"
            },
            "tags_all": {
              "Name": "My_subnet"
            },
            "vpc_id": "vpc-05c9671e07613952c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "435556620349",
            "id": "subnet-0661b2d8f3a74c4df",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:435556620349:vpc/vpc-05c9671e07613952c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-084b44a1f8e9d1dc4",
            "default_route_table_id": "rtb-053f38453f8795cfd",
            "default_security_group_id": "sg-0d0e7e53548844065",
            "dhcp_options_id": "dopt-02cc888bcba508378",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05c9671e07613952c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-053f38453f8795cfd",
            "owner_id": "435556620349",
            "region": "ap-south-1",
            "tags": {
              "Name": "My_vpc"
            },
            "tags_all": {
              "Name": "My_vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "435556620349",
            "id": "vpc-05c9671e07613952c",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}